[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
inquire = "0.6.2"
serde = {version = "1.0.188", features=["derive"]}
serde_json = "1.0.106"
